prueba añade indicadores mapa

--- a/views/tiempo-planta.ejs
+++ b/views/tiempo-planta.ejs
@@ -116,16 +116,66 @@ thead tr:nth-child(1) th{
     <div class="row justify-content-center h-100">
         <div class="col-4 hidden-md-down " style="overflow-y:auto;" id="yellow">
             <!--<div class="col-4 hidden-md-down" >  -->
+
+              <div class="container-fluid" style="  padding: 20px;">
+                <div class="row">
+                  <div class="col-xl-6 col-md-6">
+                    <div class="card card-stats">
+                      <!-- Card body -->
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">Total traffic</h5>
+                            <span class="h2 font-weight-bold mb-0">350,897</span>
+                          </div>
+                          <div class="col-auto">
+                            <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                              <i class="ni ni-active-40"></i>
+                            </div>
+                          </div>
+                        </div>
+                        <p class="mt-3 mb-0 text-sm">
+                          <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                          <span class="text-nowrap">Since last month</span>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-xl-6 col-md-6">
+                    <div class="card card-stats">
+                      <!-- Card body -->
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col">
+                            <h5 class="card-title text-uppercase text-muted mb-0">Total traffic</h5>
+                            <span class="h2 font-weight-bold mb-0">350,897</span>
+                          </div>
+                          <div class="col-auto">
+                            <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
+                              <i class="ni ni-active-40"></i>
+                            </div>
+                          </div>
+                        </div>
+                        <p class="mt-3 mb-0 text-sm">
+                          <span class="text-success mr-2"><i class="fa fa-arrow-up"></i> 3.48%</span>
+                          <span class="text-nowrap">Since last month</span>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+      </div>
+      
+      </div>
           
             <div id="tabla-instalaciones" style=" height: 600px; overflow: auto;" >
                 <table class="table table-hover" >
                     <thead>
                       <tr>
-                        <th scope="col">CODIGO</th>
+                        <th scope="col">COD.</th>
                         <th scope="col">INSTALACION</th>
-                        <th scope="col">DURACION (HH)</th>
-                        <th scope="col">AUDITORIAS</th>
-                        <th scope="col">VISITAS</th>
+                        <th scope="col">DUR. (HH)</th>
+                        <th scope="col">AUD.</th>
+                        <th scope="col">VIS.</th>
                         <th  style="display: none;"scope="col">Longitud</th>
                         <th style="display: none;" scope="col"> Latitud</th>
                        
