--- a/views/tiempo-planta.ejs
+++ b/views/tiempo-planta.ejs
@@ -137,7 +137,7 @@ thead tr:nth-child(1) th{
 <p><%= infoSupervisor['supervisor_id'] +" - " +infoSupervisor['supervisor_nombre']+" - "+infoSupervisor['supervisor_zona'] %></p>
 -->
 <h2 style="margin:0;padding: 10px;text-align:center;background-color: black ;color: white;">TIEMPO EN PLANTA ULTIMOS 30 DIAS</h2>
-<h2 style="margin:0;text-align:center;background-color: black ;color: white;"><%= (infoSupervisor['supervisor_id'] +" - " +infoSupervisor['supervisor_nombre']+" - "+infoSupervisor['supervisor_zona']).toUpperCase()%></h2>
+<h2 style="margin:0;text-align:center;background-color: black ;color: white;"><%= (infoSupervisor['tituloMapa'].toUpperCase()).toUpperCase()%></h2>
 
 <div class="container-fluid h-100">
     <div class="row justify-content-center h-100">
