añade matriz inmediata junto con los filtros correspondientes

--- a/views/control-matriz-reportes.ejs
+++ b/views/control-matriz-reportes.ejs
@@ -65,6 +65,7 @@
                   <option selected value="">SELECCIONE MATRIZ.. </option>
                   <option  value="8">MATRIZ PRINCIPAL </option>
                   <option value="9">MATRIZ RESUMEN</option>
+                  <option value="10">MATRIZ ACCION INMEDIATA</option>
      
                 </select>
               </div>
