--- a/views/tiempo-planta.ejs
+++ b/views/tiempo-planta.ejs
@@ -111,20 +111,39 @@ thead tr:nth-child(1) th{
   let visitas_text='text-danger'
   let auditorias_text='text-danger'
   let tiempo_planta_text='text-danger'
-   
-  //var visitas_crecimiento=parseInt((infoSupervisor['metricasActual']['visitas_percent'] - infoSupervisor['metricasPasado']['visitas_percent'])
-  // /infoSupervisor['metricasPasado']['visitas_percent']* 100)
+
+  let visitas_text_principal='text-danger'
+  let auditorias_text_principal='text-danger'
+  let tiempo_planta_text_principal='text-danger'
+
+ if(infoSupervisor['metricasActual']['visitas_percent']>0.5&&infoSupervisor['metricasActual']['visitas_percent'] < 0.75)
+ visitas_text_principal='text-warning'
+ if(infoSupervisor['metricasActual']['visitas_percent']>0.75)
+ visitas_text_principal='text-success'
+
+
+ if(infoSupervisor['metricasActual']['auditorias_percent']>0.5&&infoSupervisor['metricasActual']['auditorias_percent'] < 0.75)
+ auditorias_text_principal='text-warning'
+ if(infoSupervisor['metricasActual']['auditorias_percent']>0.75)
+ auditorias_text_principal='text-success'
+
+
+ if(infoSupervisor['metricasActual']['tiempo_planta_percent']>0.5&&infoSupervisor['metricasActual']['tiempo_planta_percent'] < 0.75)
+ tiempo_planta_text_principal='text-warning'
+ if(infoSupervisor['metricasActual']['tiempo_planta_percent']>0.75)
+ tiempo_planta_text_principal='text-success'
+
+
+
   var visitas_crecimiento=infoSupervisor['metricasActual']['visitas_percent']-infoSupervisor['metricasPasado']['visitas_percent']
    if (visitas_crecimiento>=0) visitas_text='text-success'
+   
 
-
-  //var tiempo_planta_crecimiento= parseInt((infoSupervisor['metricasActual']['tiempo_planta_percent'] - infoSupervisor['metricasPasado']['tiempo_planta_percent'])
-  // /infoSupervisor['metricasPasado']['tiempo_planta_percent']* 100)
+  
   var tiempo_planta_crecimiento=infoSupervisor['metricasActual']['tiempo_planta_percent']-infoSupervisor['metricasPasado']['tiempo_planta_percent']
    if (tiempo_planta_crecimiento>=0 ) tiempo_planta_text='text-success'
 
-  // var auditorias_crecimiento= parseInt((infoSupervisor['metricasActual']['auditorias_percent'] - infoSupervisor['metricasPasado']['auditorias_percent'])
-  // /infoSupervisor['metricasPasado']['auditorias_percent']* 100)
+
   var auditorias_crecimiento=infoSupervisor['metricasActual']['auditorias_percent']-infoSupervisor['metricasPasado']['auditorias_percent']
   
    if (auditorias_crecimiento>=0) auditorias_text='text-success'
@@ -153,7 +172,7 @@ thead tr:nth-child(1) th{
                         <div class="row">
                           <div class="col">
                             <h5 class="card-title text-uppercase text-muted mb-0">T. PLANTA</h5>
-                            <span class="h2 font-weight-bold mb-0"><%=infoSupervisor['metricasActual']['tiempo_planta_percent']%> %</span>
+                            <span class="h2 font-weight-bold mb-0  <%=tiempo_planta_text_principal %> "><%=infoSupervisor['metricasActual']['tiempo_planta_percent']%> %</span>
                           </div>
                           <div class="col-auto">
                             <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -177,7 +196,7 @@ thead tr:nth-child(1) th{
                         <div class="row">
                           <div class="col">
                             <h5 class="card-title text-uppercase text-muted mb-0">AUDITOR...</h5>
-                            <span class="h2 font-weight-bold mb-0"><%=infoSupervisor['metricasActual']['auditorias_percent']%> %</span>
+                            <span class="h2 font-weight-bold mb-0 <%=auditorias_text_principal %>" ><%=infoSupervisor['metricasActual']['auditorias_percent']%> %</span>
                           </div>
                           <div class="col-auto">
                             <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -201,7 +220,7 @@ thead tr:nth-child(1) th{
                         <div class="row">
                           <div class="col">
                             <h5 class="card-title text-uppercase text-muted mb-0">VISITAS</h5>
-                            <span class="h2 font-weight-bold mb-0"> <%=infoSupervisor['metricasActual']['visitas_percent']%>  %</span>
+                            <span class="h2 font-weight-bold mb-0 <%=visitas_text_principal %>"> <%=infoSupervisor['metricasActual']['visitas_percent']%>  %</span>
                           </div>
                           <div class="col-auto">
                             <div class="icon icon-shape bg-gradient-red text-white rounded-circle shadow">
@@ -223,7 +242,7 @@ thead tr:nth-child(1) th{
       </div>
           
             <div id="tabla-instalaciones" style=" height: 600px; overflow: auto;" >
-                <table class="table table-hover" >
+                <table id="tabla-principal" class="table table-hover" >
                     <thead>
                       <tr>
                         <th scope="col">COD.</th>
@@ -308,6 +327,11 @@ $el.hover(stop, anim);
 */
 
 
+$(document).ready(function () {
+//pintaTabla()
+console.log("aaaa",infoSupervisor)
+
+})
 
 
 var getTest =  JSON.parse('<%-JSON.stringify(geoJSON)%>') //var test is now assigned to getTest which will only work on browsers
@@ -472,11 +496,12 @@ function loop() {
 var count=0
 var locations=[1]
                 $("table tr").each(function(index,tr) {
+                 
  console.log("test")
     
     
     setTimeout(function() {
-
+      pintaTabla()
         var longitude=  $(tr).find("td").eq(6).html()  
    var latitude=$(tr).find("td").eq(5).html()          
      var   location = L.circleMarker([latitude,longitude], {radius: 50,color:'black'});
@@ -487,8 +512,9 @@ var locations=[1]
       mymap.removeLayer(locations[locations.length-2]);
       // marker2.removeFrom(map)
 
-      $("table tr").eq(index-1).find("td").css('background-color','white')
-        $("table tr").eq(index-1).find("td").css('color','black')
+      ////$("table tr").eq(index-1).find("td").css('background-color','white')
+
+       //// $("table tr").eq(index-1).find("td").css('color','black')
       //  $(tr).find("td").css('background-color','white')
      //   $(".testBox").append('<p class="box">' + value + '</p>');
      console.log(tr)
@@ -543,6 +569,36 @@ if (index==$("table tr").length-1){
 
   
   });
+}
+
+
+function pintaTabla(){
+  console.log("tabla",  $("table tr"))
+
+
+  $("table tr").each(function(index,tr) {
+
+  let valor=0
+
+    if(infoSupervisor['data_instalaciones'][index])
+
+ valor=infoSupervisor['data_instalaciones'][index]['DURACION']/infoSupervisor['data_instalaciones'][index]['DURACION_PLANI']
+  
+  if (valor<0.5){
+    $("table tr").eq(index+1).find("td").css('background-color','red')
+    $("table tr").eq(index+1).find("td").css('color','white')
+
+  } else if (valor>0.5&&valor<0.75){
+    $("table tr").eq(index+1).find("td").css('background-color','yellow')
+    $("table tr").eq(index+1).find("td").css('color','black')
+
+  }else{
+    $("table tr").eq(index+1).find("td").css('background-color','green')
+    $("table tr").eq(index+1).find("td").css('color','white')
+  }
+
+  
+  })
 }
 
 
